--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,8 +7,8 @@
         android:title="@string/action_new"
         app:showAsAction="always" />
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_moreinfo"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_moreinfo"
         app:showAsAction="never" />
 </menu>
